--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AsimBhatia/AsimBhatia.github.io#readme",
   "dependencies": {
+    "node-github-pages": "^0.1.1",
     "sal.js": "^0.7.1"
   }
 }
